--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,17 @@ repositories {
 }
 
 dependencies {
-    compile group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
-    compile group: 'org.glassfish', name: 'javax.xml.bind', version: '3.0-b69'
-    compile group: 'com.sun.xml.ws', name: 'servlet', version: '2.2.8'
-    compile group: 'com.sun.xml.ws', name: 'jaxws-rt', version: '2.1.3'
-    compile group: 'com.sun.xml.ws', name: 'jaxws-local-transport', version: '2.3.2'
-    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: '2.28'
-    compile group: 'org.glassfish.jersey.bundles', name: 'jaxrs-ri', version: '2.5.1'
-    compile group: 'com.sun.jersey', name: 'jersey-bundle', version: '1.19.4'
-    compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
-    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.28'
-    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.28'
-    compile 'org.glassfish.jersey.core:jersey-server:2.22.2'
-    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.22.2'
+//    compile group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
+//    compile group: 'org.glassfish', name: 'javax.xml.bind', version: '3.0-b69'
+//    compile group: 'com.sun.xml.ws', name: 'servlet', version: '2.2.8'
+//    compile group: 'com.sun.xml.ws', name: 'jaxws-rt', version: '2.1.3'
+//    compile group: 'com.sun.xml.ws', name: 'jaxws-local-transport', version: '2.3.2'
+//    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: '2.28'
+//    compile group: 'org.glassfish.jersey.bundles', name: 'jaxrs-ri', version: '2.5.1'
+//    compile group: 'com.sun.jersey', name: 'jersey-bundle', version: '1.19.4'
+//    compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
+//    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.28'
+//    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.28'
+//    compile 'org.glassfish.jersey.core:jersey-server:2.22.2'
+//    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.25.1'
 }
