--- a/myartifact/build.gradle
+++ b/myartifact/build.gradle
@@ -14,4 +14,8 @@ repositories {
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    compile "org.codehaus.jackson:jackson-core-asl:1.9.13"
+    compile "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
 }
