--- a/webservice/build.gradle
+++ b/webservice/build.gradle
@@ -3,13 +3,6 @@ plugins {
     id 'war'
 }
 
-//properties {
-//    jackson.version=''
-//    stormpath.version=''
-//    project.build.sourceEncoding='UTF-8'
-//    servlet.version='3.1.0'
-//}
-
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -22,14 +15,23 @@ dependencies {
     compile "javax.ws.rs:javax.ws.rs-api:2.0"
     compile "javax.servlet:javax.servlet-api:3.0.1"
     compile "javax.annotation:javax.annotation-api:1.2-b02"
+
     compile "org.glassfish.jersey.containers:jersey-container-servlet:2.10"
     compile "org.glassfish.jersey.ext:jersey-mvc:2.3.1"
+    compile "org.glassfish.jersey.media:jersey-media-json-jackson1:2.11"
+
+    compile "com.sun.jersey:jersey-json:1.18.1"
+    compile "com.sun.jersey:jersey-server:1.18.1"
+    compile "com.sun.jersey:jersey-core:1.18.1"
+    compile "com.sun.jersey:jersey-servlet:1.18.1"
+
     compile "com.stormpath.sdk:stormpath-sdk-api:1.0.RC2"
     compile "com.stormpath.sdk:stormpath-sdk-httpclient:1.0.RC2"
     compile "com.stormpath.sdk:stormpath-sdk-oauth:1.0.RC2"
-    compile "org.glassfish.jersey.media:jersey-media-json-jackson1:2.11"
-    compile "com.sun.jersey:jersey-json:1.18.1"
     compile "org.codehaus.jackson:jackson-core-asl:1.9.13"
     compile "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
     compile "com.sun.xml.ws:jaxws-rt:2.1.3"
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+
+    compile project(':myartifact')
 }
